Update about section, fix home sticky issue on mobile

--- a/src/styles/About.module.css
+++ b/src/styles/About.module.css
@@ -1,18 +1,5 @@
 .aboutSection {
-    @apply container my-14 flex h-screen w-full flex-col justify-start space-y-10 md:flex-row bg-primary;
+    @apply container my-14 flex min-h-screen w-full flex-col justify-start space-y-10 md:flex-row bg-secondary px-8 md:px-28 rounded-lg;
 
-    max-width: none; /* Override max-width of the container */
-    padding-left: 4rem;
-    padding-right: 4rem;
-}
-
-.profileCanvas {
-    @apply m-5 md:mt-40 !important;
-    /* @apply bg-background border rounded-3xl h-[300px] xl:w-[340px] xl:min-w-[340px] overflow-hidden; */
-    @media (max-width: 600px) {
-        display: none;
-        /* transform: scale(0.7) translateX(-100px) !important; */
-        /* position: absolute; */
-        /* z-index: -9999; */
-    }
+    max-width: 1650px; /* Override max-width of the container */
 }
