--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,5 +1,6 @@
 @import "clash-grotesk.css";
 @import url('https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300..700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -7,7 +8,7 @@
 
 @layer base {
   :root {
-    --background: 0 7% 7%;
+    --background: 0 6% 7%;
     --foreground: 210 40% 98%;
 
     --card: 222.2 84% 4.9%;
@@ -16,10 +17,10 @@
     --popover: 222.2 84% 4.9%;
     --popover-foreground: 210 40% 98%;
 
-    --primary: 255, 85%, 43%;
-    --primary-foreground: 0 0% 0%;
+    --primary: 0 6% 7%;
+    --primary-foreground: 45, 18%, 82%;
 
-    --secondary: 214.2 98.47% 74.31%;
+    --secondary: 45, 18%, 82%;
     --secondary-foreground: 218 11% 65%;
 
     --muted: 217.2 32.6% 17.5%;
@@ -36,6 +37,9 @@
     --ring: 212.7 26.8% 83.9%;
 
     --radius: 0.5rem;
+
+    --gradient-primary: 255, 85%, 43%;
+    --gradient-secondary: 214.2 98.47% 74.31%;
   }
 }
 
@@ -94,7 +98,7 @@
     font-family: "Plumpelo V2 Plumpy";
   }
   .text-gradient {
-    @apply bg-gradient-to-br from-primary to-secondary bg-clip-text text-transparent;
+    @apply bg-gradient-to-br from-gradient-primary to-gradient-secondary bg-clip-text text-transparent;
   }
   .nav-active {
     color: rgb(226 232 240) !important;
